fix(SearchComponent.tsx & shared_components.scss) : add fallback message for searched result not found & fix 'update slip modal' z-indexing

--- a/src/styles/shared_components.scss
+++ b/src/styles/shared_components.scss
@@ -194,6 +194,7 @@ select{
     width: 100vw;
     height: 100vh;
     background-color: rgba(0,0,0,0.6);
+    z-index: 5;
     .dialog_cont{
         //border: 2px solid blue;
         position: absolute;
